# oh-my-lazybones

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  AI_README.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  SECURITY.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md  design-template.md  labeler.yml  review-rules.yml  test-spec-template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: auto-label.yml  ci.yml  docker-publish.yml  frontend-ci.yml  issue-triage.yml  pr-review.yml  regression.yml
cli/: README.md  pyproject.toml  setup.py
cli/lazybones/: __init__.py  client.py  main.py  server.py
cli/lazybones/commands/: install.py  search.py  seed.py  serve.py  skill.py
deploy/: .env.production  Dockerfile.api  docker-compose.yml
deploy/mysql/: init.sql
deploy/nginx/: api.lazybone.club.conf  selfhost.conf
deploy/scripts/: backup.sh  health-monitor.sh
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: client.ts
frontend/src/assets/styles/: base.css
frontend/src/components/: SearchBar.vue  SkeletonCard.vue  SkillCard.vue  StatsBar.vue  TagBadge.vue
frontend/src/composables/: useSkills.ts
frontend/src/views/: Home.vue  Publish.vue  Search.vue  SkillDetail.vue
scripts/: test_full.py
server/: config.py  database.py  dependencies.py  exceptions.py  main.py  requirements.txt
server/mcp/: __init__.py  server.py  tools.py
server/models/: skill.py
server/repositories/: base.py  skill.py
server/routers/: skills.py  stats.py
server/schemas/: common.py  skill.py
server/services/: search.py  skill_registry.py
server/tap/: __init__.py
tests/: conftest.py  test_api.py  test_exceptions.py  test_mcp.py  test_mcp_smoke.py  test_repository.py  test_sanity.py  test_schema.py  test_service.py  test_skill_dsl.py  test_tap.py
