[project]
name = "oh-my-lazybones"
version = "0.4.0"
description = "The marketplace for Agent Skills — discover, install, and share"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "Samuel-lzyb", email = "lzymaster@lazybone.club" }]
keywords = ["agent", "skills", "mcp", "cli", "ai-agents", "marketplace"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["typer", "httpx", "pyyaml", "uvicorn"]

[project.urls]
Homepage = "https://lazybone.club"
Repository = "https://github.com/Samuel-lzyb/oh-my-lazybones"

[project.scripts]
lazy = "lazybones.main:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
lazybones = ["frontend_dist/**/*"]
